Beginnings of key mapping.

--- a/bob.cfg
+++ b/bob.cfg
@@ -118,9 +118,9 @@ CXX  = clang++
 .d   .obj = dmd -c ${INPUT} -I${SYS_IMP}            -I${PROJ_INC} ${DFLAGS}   -of${OUTPUT}
 
 # Static libraries
-.c   .slib = rm -f ${OUTPUT} && ar csr ${OUTPUT} ${INPUT}
-.cxx .slib = rm -f ${OUTPUT} && ar csr ${OUTPUT} ${INPUT}
-.d   .slib = rm -f ${OUTPUT} && ar csr ${OUTPUT} ${INPUT}
+.c   .slib = ar csr ${OUTPUT} ${INPUT}
+.cxx .slib = ar csr ${OUTPUT} ${INPUT}
+.d   .slib = ar csr ${OUTPUT} ${INPUT}
 
 # Dynamic libraries
 .c   .dlib = ${CC} -shared ${INPUT} ${LINKFLAGS} -L${SYS_LIB} -L${PROJ_LIB} -l${LIBS} -o ${OUTPUT}
