Fix some misc bugs and warnings, update bog.cfg.

--- a/bob.cfg
+++ b/bob.cfg
@@ -96,8 +96,9 @@ SYS_LIB  =
 SYS_PATH =
 
 # Compiler switches
-CFLAGS     = -fpic -pedantic -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2
-CXXFLAGS   = ${CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor
+COMMON_CFLAGS = -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wunused-parameter -Wredundant-decls -Wold-style-definition -Wstrict-prototypes -Wmissing-declarations -Wmissing-field-initializers -Wno-format-zero-length
+CFLAGS = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs
+CXXFLAGS = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor
 DFLAGS     = -w -wi -I/home/dbryant/source/d/GtkD.git-bagnose/src
 LINKFLAGS  =
 DLINKFLAGS =
@@ -132,24 +133,13 @@ CXX  = clang++
 .d   .exe = dmd ${INPUT} ${DLINKFLAGS} -L-L${SYS_LIB} -L-L${PROJ_LIB} -L-l${LIBS} -of${OUTPUT}
 
 [modes]
-
-# For each mode, add to already-defined variables.
-# Format of a mode is: the name of the mode, followed by indented
-# variable additions. eg:
-#
-# debug
-#     CFLAGS += ggdb3
-#
-# Exactly one mode is in use for a given build directory, and is specified
-# on the bob-config command line. eg:  mode=debug
-
 debug
-    CFLAGS   += -O0 -ggdb3
-    DFLAGS   += -gc
+    COMMON_CFLAGS += -O0 -ggdb3
+    DFLAGS        += -gc
 
 release
-    CFLAGS   += -O2 -NDEBUG
-    DFLAGS   += -O  -release
+    COMMON_CFLAGS += -O2 -NDEBUG
+    DFLAGS        += -O  -release
 
 [syslibs]
 util = pty.h
