Make it build under gcc (and not just clang).

--- a/bob.cfg
+++ b/bob.cfg
@@ -96,8 +96,8 @@ SYS_LIB  =
 SYS_PATH =
 
 # Compiler switches
-COMMON_CFLAGS = -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wunused-parameter -Wredundant-decls -Wold-style-definition -Wstrict-prototypes -Wmissing-declarations -Wmissing-field-initializers -Wno-format-zero-length
-CFLAGS = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs
+COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wunused-parameter -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
+CFLAGS = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs -Wold-style-definition -Wstrict-prototypes
 CXXFLAGS = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor
 DFLAGS     = -w -wi -I/home/dbryant/source/d/GtkD.git-bagnose/src
 LINKFLAGS  =
