--- a/bob.cfg
+++ b/bob.cfg
@@ -7,8 +7,14 @@ SYS_INC  =
 SYS_LIB  =
 SYS_PATH =
 
+# pkg-config pangocairo --cflags
+PANGO_CFLAGS = -pthread -I/usr/include/pango-1.0 -I/usr/include/cairo -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/pixman-1 -I/usr/include/freetype2 -I/usr/include/libdrm -I/usr/include/libpng15
+# pkg-config pangocairo --libs
+#PANGO_LIBS = -lpangocairo-1.0 -lpango-1.0 -lgobject-2.0 -lglib-2.0 -lcairo
+
 # Compiler switches
-COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wunused-parameter -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
+COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wunused-parameter -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length ${PANGO_CFLAGS}
+
 CFLAGS = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs -Wold-style-definition -Wstrict-prototypes
 CXXFLAGS = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor
 DFLAGS     = -w -wi -I/home/dbryant/source/d/GtkD.git-bagnose/src
@@ -64,3 +70,4 @@ xcb         = xcb/xcb.h
 xcb-keysyms = xcb/xcb_keysyms.h
 cairo xcb   = cairo-xcb.h
 
+pangocairo-1.0 pango-1.0 gobject-2.0 glib-2.0 cairo = pango
