Use class enums where appropriate (C++11)

--- a/bob.cfg
+++ b/bob.cfg
@@ -47,11 +47,11 @@ CXX  = clang++
 
 [modes]
 debug
-    COMMON_CFLAGS += -O0 -ggdb3
+    COMMON_CFLAGS += -O0 -ggdb3 -DDEBUG=1
     DFLAGS        += -gc
 
 release
-    COMMON_CFLAGS += -O2 -NDEBUG
+    COMMON_CFLAGS += -O2 -DDEBUG=0 -DNDEBUG
     DFLAGS        += -O  -release
 
 [syslibs]
