xcb colour support and title setting.

--- a/bob.cfg
+++ b/bob.cfg
@@ -62,4 +62,5 @@ Xft         = X11/Xft
 fontconfig  = fontconfig
 xcb         = xcb/xcb.h
 xcb-keysyms = xcb/xcb_keysyms.h
+xcb-icccm   = xcb/xcb_icccm.h
 cairo xcb   = cairo-xcb.h
