Some playing with key syms and xkbcommon.

--- a/bob.cfg
+++ b/bob.cfg
@@ -64,3 +64,4 @@ xcb         = xcb/xcb.h
 xcb-keysyms = xcb/xcb_keysyms.h
 xcb-icccm   = xcb/xcb_icccm.h
 cairo xcb   = cairo-xcb.h
+xkbcommon   = xkbcommon
