Experimental resize support (doesn't work).

--- a/bob.cfg
+++ b/bob.cfg
@@ -61,5 +61,6 @@ fontconfig  = fontconfig
 xcb         = xcb/xcb.h
 xcb-keysyms = xcb/xcb_keysyms.h
 xcb-icccm   = xcb/xcb_icccm.h
+xcb-ewmh    = xcb/xcb_ewmh.h
 cairo xcb   = cairo-xcb.h
 xkbcommon   = xkbcommon
