--- a/bob.cfg
+++ b/bob.cfg
@@ -62,5 +62,6 @@ xcb         = xcb/xcb.h
 xcb-keysyms = xcb/xcb_keysyms.h
 xcb-icccm   = xcb/xcb_icccm.h
 xcb-ewmh    = xcb/xcb_ewmh.h
+xcb-util    = xcb/xcb_aux.h
 cairo xcb   = cairo-xcb.h
 xkbcommon   = xkbcommon
