-Wunused-parameter for debug build only to stop breaking release build

--- a/bob.cfg
+++ b/bob.cfg
@@ -8,7 +8,7 @@ SYS_LIB  =
 SYS_PATH =
 
 # Compiler switches
-COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wunused-parameter -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
+COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
 
 CFLAGS     = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs -Wold-style-definition -Wstrict-prototypes
 CXXFLAGS   = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor
@@ -51,8 +51,13 @@ debug
     DFLAGS        += -gc
 
 release
-    COMMON_CFLAGS += -O2 -DDEBUG=0 -DNDEBUG
+    COMMON_CFLAGS += -O2 -DDEBUG=0 -DNDEBUG -Wno-unused-parameter
     DFLAGS        += -O  -release
+
+coverage
+    COMMON_CFLAGS += -O0 -ggdb3 -DDEBUG=1 --coverage
+    LINKFLAGS     += --coverage
+    DFLAGS        += -gc
 
 [syslibs]
 util        = pty.h
