--- a/bob.cfg
+++ b/bob.cfg
@@ -8,7 +8,7 @@ SYS_LIB  =
 SYS_PATH =
 
 # Compiler switches
-COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
+COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -pthread -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
 
 CFLAGS     = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs -Wold-style-definition -Wstrict-prototypes
 CXXFLAGS   = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor -fno-rtti
@@ -69,3 +69,4 @@ xcb-ewmh    = xcb/xcb_ewmh.h
 xcb-util    = xcb/xcb_aux.h
 cairo xcb   = cairo-xcb.h
 xkbcommon   = xkbcommon
+pangocairo-1.0 pango-1.0 gobject-2.0 glib-2.0 = pango
