--- a/bob.cfg
+++ b/bob.cfg
@@ -11,7 +11,7 @@ SYS_PATH =
 COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
 
 CFLAGS     = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs -Wold-style-definition -Wstrict-prototypes
-CXXFLAGS   = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor
+CXXFLAGS   = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor -fno-rtti
 DFLAGS     = -w -wi -I/home/dbryant/source/d/GtkD.git-bagnose/src
 LINKFLAGS  =
 DLINKFLAGS =
