--- a/bub.cfg
+++ b/bub.cfg
@@ -8,7 +8,7 @@ SYS_LIB  =
 SYS_PATH =
 
 # Compiler switches
-COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -pthread -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length
+COMMON_CFLAGS = -D_GNU_SOURCE=1 -DFILE_PATH=${INPUT} -isystem/usr/include/cairo -pthread -I/usr/include/pango-1.0 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -isystem/usr/include/freetype2 -fpic -pedantic -Werror -Wextra -Wall -Wno-long-long -Wundef -Wredundant-decls -Wshadow -Wsign-compare -Wredundant-decls -Wmissing-field-initializers -Wno-format-zero-length -DVERSION="0.0"
 
 CFLAGS     = ${COMMON_CFLAGS} -std=c99 -Wunused-local-typedefs -Wold-style-definition -Wstrict-prototypes
 CXXFLAGS   = ${COMMON_CFLAGS} -std=c++11 -Woverloaded-virtual -Wsign-promo -Wctor-dtor-privacy -Wnon-virtual-dtor -fno-rtti
