--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=terminol-git
 _pkgname=terminol
-pkgver=20130715.0122ec4
+pkgver=20130715.7e0588e
 pkgrel=1
 pkgdesc='A simple terminal emulator'
 arch=(i686 x86_64)
@@ -25,12 +25,20 @@ prepare() {
 
 build() {
     cd "${srcdir}/${_pkgname}"
+    sed -i \
+      -e 's/\(CPPFLAGS\s\+\):=/\1\+=/g' \
+      -e 's/\(CXXFLAGS\s\+\):=/\1\+=/g' \
+      -e 's/\(LDFLAGS\s\+\):=/\1\+=/g' \
+      common.mak
     ./configure "${srcdir}/build" release gnu
     cd "${srcdir}/build"
+    make info
     make
 }
 
 package() {
     cd "${srcdir}/build"
     make INSTALLDIR="${pkgdir}/usr" install
+    install -Dm644 src/COPYING "${pkgdir}/usr/share/licenses/${pkgname}/COPYING"
+    install -Dm644 src/README.md "${pkgdir}/usr/share/doc/${pkgname}/README"
 }
