--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,6 +1,6 @@
 pkgname=terminol-git
 _pkgname=terminol
-pkgver=20130715.7e0588e
+pkgver=20130717.85eede3
 pkgrel=1
 pkgdesc='A simple terminal emulator'
 arch=(i686 x86_64)
@@ -26,14 +26,14 @@ prepare() {
 build() {
     cd "${srcdir}/${_pkgname}"
     sed -i \
-      -e 's/\(CPPFLAGS\s\+\):=/\1\+=/g' \
-      -e 's/\(CXXFLAGS\s\+\):=/\1\+=/g' \
-      -e 's/\(LDFLAGS\s\+\):=/\1\+=/g' \
+      -e 's/^\(CPPFLAGS\s\+\):=/\1\+=/g' \
+      -e 's/^\(CXXFLAGS\s\+\):=/\1\+=/g' \
+      -e 's/^\(LDFLAGS\s\+\):=/\1\+=/g'  \
       common.mak
     ./configure "${srcdir}/build" release gnu
     cd "${srcdir}/build"
     make info
-    make
+    make -j3
 }
 
 package() {
