Major refactor and bug fixes. Should have been lotsa smaller commits :(

--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -7,7 +7,7 @@ arch=(i686 x86_64)
 url='https://github.com/bagnose/terminol'
 arch=('i686' 'x86_64')
 license=('GPL')
-depends=('pango' 'fontconfig' 'xcb-util' 'xcb-util-wm' 'libxkbcommon')
+depends=('pango' 'xcb-util' 'xcb-util-keysyms' 'xcb-util-wm' 'libxkbcommon')
 makedepends=('git')
 source=('git://github.com/bagnose/terminol.git')
 provides=("${_pkgname}")
